--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </div>
 
     <script>
-        // Iniciar el mapa
+        // Initialize the map
         const map = L.map('map').setView([20, 0], 2);
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             maxZoom: 18,
@@ -158,16 +158,19 @@
         }).addTo(map);
 
         let userName = '';
-        let intentions = [];
+        let intentions = []; // This array will now hold data fetched from Apps Script
 
-        // --- NUEVO: Lista de palabras prohibidas ---
+        // Google Apps Script Web App URL
+        const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyCzQWq7nd-ixQXWKyh84QAZYB0HPVdfdbfrdn0QRXY9T0o5pmkIzs1VDE5EikVdb373g/exec';
+
+        // Forbidden words list
         const forbiddenWords = [
             'puta', 'cabrón', 'mierda', 'coño', 'joder', 'gilipollas', 'imbécil',
             'estúpido', 'idiota', 'fuck', 'shit', 'asshole', 'bitch', 'cunt', 'idiot'
-            // Añade más palabras según necesites, en minúsculas
+            // Add more words as needed, in lowercase
         ];
 
-        // --- NUEVA FUNCIÓN: Verificar palabras prohibidas ---
+        // Function to check for forbidden words
         function containsForbiddenWords(text) {
             const lowerText = text.toLowerCase();
             for (const word of forbiddenWords) {
@@ -179,35 +182,49 @@
             return false;
         }
 
-        // Función para cargar las intenciones guardadas en LocalStorage al inicio
-        function loadIntenciones() {
-            const storedIntenciones = localStorage.getItem('worldIntentions');
-            if (storedIntenciones) {
-                intentions = JSON.parse(storedIntenciones);
+        // Function to load intentions from Google Apps Script
+        async function loadIntenciones() {
+            try {
+                const response = await fetch(APPS_SCRIPT_URL);
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+                const data = await response.json();
+                intentions = data; // Assign fetched data to the intentions array
+
+                // Clear existing messages before loading new ones to prevent duplicates
+                document.getElementById("messages").innerHTML = '';
+
                 intentions.forEach(item => {
-                    if (!containsForbiddenWords(item.intention)) {
-                        addMessageToChat(item.name, item.intention);
+                    // Assuming column headers in Google Sheet are 'Nombre', 'Intencion', 'Latitud', 'Longitud'
+                    if (!containsForbiddenWords(item.Intencion)) {
+                        addMessageToChat(item.Nombre, item.Intencion);
+                        // Add marker to map if coordinates exist
+                        if (item.Latitud && item.Longitud) {
+                            const popupContent = `<strong>${item.Nombre}:</strong> ${item.Intencion}<br><em>(Desde un lugar en el mundo)</em>`; // City might not be in sheet
+                            L.marker([item.Latitud, item.Longitud])
+                                .addTo(map)
+                                .bindPopup(popupContent);
+                        }
                     }
                 });
+            } catch (error) {
+                console.error("Error loading intentions from Google Apps Script:", error);
+                alert("No se pudieron cargar las intenciones. Por favor, inténtalo de nuevo más tarde.");
             }
         }
 
-        // Función para guardar las intenciones en LocalStorage
-        function saveIntenciones() {
-            localStorage.setItem('worldIntentions', JSON.stringify(intentions));
-        }
-
-        // Función para añadir mensajes al chat
+        // Function to add messages to the chatbox
         function addMessageToChat(name, intention) {
             const container = document.getElementById("messages");
             const p = document.createElement("p");
             p.classList.add('message-item');
-            p.innerHTML = `<strong>${name}</strong>: ${intention} ✨`;
+            p.innerHTML = `<strong>${name}</strong>: ${intention} ✨`; // Emoji added here
             container.appendChild(p);
-            container.scrollTop = container.scrollHeight;
+            container.scrollTop = container.scrollHeight; // Scroll to bottom
         }
 
-        // Función para añadir la intención
+        // Function to add an intention to Google Apps Script
         async function addIntention() {
             const nameInput = document.getElementById("name-input-field");
             const messageInput = document.getElementById("message-input-field");
@@ -226,46 +243,82 @@
                 return;
             }
 
-            userName = name;
+            userName = name; // Store name for potential future use (e.g., pre-filling)
+
+            let lat = null;
+            let lon = null;
+            let city = 'un lugar en el mundo';
+
+            // Get location by IP
+            try {
+                const geoResponse = await fetch("https://ipapi.co/json/");
+                const geoData = await geoResponse.json();
+                lat = geoData.latitude;
+                lon = geoData.longitude;
+                city = geoData.city || 'un lugar en el mundo';
+            } catch (geoError) {
+                console.warn("Could not get location by IP:", geoError);
+                // Continue without location if it fails
+            }
+
+            const payload = {
+                name: name,
+                intention: intention,
+                lat: lat,
+                lon: lon,
+                timestamp: new Date().toISOString()
+            };
 
             try {
-                const response = await fetch("https://ipapi.co/json/");
-                const data = await response.json();
-                const lat = data.latitude;
-                const lon = data.longitude;
+                const scriptResponse = await fetch(APPS_SCRIPT_URL, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(payload)
+                });
 
-                const popupContent = `<strong>${name}:</strong> ${intention}<br><em>(Desde ${data.city || 'un lugar en el mundo'})</em>`;
-                L.marker([lat, lon])
-                    .addTo(map)
-                    .bindPopup(popupContent)
-                    .openPopup();
+                if (!scriptResponse.ok) {
+                    throw new Error(`Apps Script HTTP error! status: ${scriptResponse.status}`);
+                }
 
-                map.setView([lat, lon], 5);
-
-                addMessageToChat(name, intention);
-
-                intentions.push({ name: name, intention: intention, lat: lat, lon: lon, timestamp: new Date().toISOString() });
-                saveIntenciones();
-
-                messageInput.value = '';
+                const result = await scriptResponse.json();
+                if (result.status === 'success') {
+                    console.log("Intention saved to Google Sheet.");
+                    // Add the new intention to the chat and map immediately for responsiveness
+                    addMessageToChat(name, intention);
+                    if (lat && lon) {
+                        const popupContent = `<strong>${name}:</strong> ${intention}<br><em>(Desde ${city})</em>`;
+                        L.marker([lat, lon])
+                            .addTo(map)
+                            .bindPopup(popupContent)
+                            .openPopup();
+                        map.setView([lat, lon], 5); // Center and zoom to new location
+                    } else {
+                        alert("Intención guardada, pero la ubicación no pudo ser determinada.");
+                    }
+                    messageInput.value = ''; // Clear intention input
+                } else {
+                    alert("Error al guardar la intención: " + (result.message || "Error desconocido."));
+                }
             } catch (error) {
-                console.error("Error al obtener la ubicación o al añadir la intención:", error);
-                alert("No se pudo obtener la ubicación o añadir la intención. Inténtalo de nuevo.");
-                addMessageToChat(name, intention + " (ubicación no disponible)");
-                intentions.push({ name: name, intention: intention, lat: null, lon: null, timestamp: new Date().toISOString() });
-                saveIntenciones();
+                console.error("Error sending intention to Google Apps Script:", error);
+                alert("No se pudo guardar la intención en el servidor. Por favor, inténtalo de nuevo.");
             }
         }
 
+        // Load intentions when the page loads
         document.addEventListener('DOMContentLoaded', loadIntenciones);
 
+        // Allow sending with Enter key in the intention input field
         document.getElementById("message-input-field").addEventListener("keypress", function(event) {
             if (event.key === "Enter") {
-                event.preventDefault();
+                event.preventDefault(); // Prevent new line in input
                 addIntention();
             }
         });
 
+        // Update userName when name input changes (optional)
         document.getElementById("name-input-field").addEventListener("change", function() {
             userName = this.value.trim();
         });
@@ -273,3 +326,4 @@
     </script>
 </body>
 </html>
+
