--- a/index.html
+++ b/index.html
@@ -1,319 +1,107 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Mapa Mundial de Intenciones</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f0f0f0;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-
-        h1 {
-            margin-top: 20px;
-            color: #333;
-        }
-
-        .banner-container {
-            text-align: center;
-            margin: 20px auto;
-            max-width: 100%;
-        }
-        .banner-container img {
-            display: block;
-            margin: 0 auto;
-            border: none;
-        }
-
-
-        #map {
-            width: 90%;
-            max-width: 800px;
-            height: 500px;
-            margin: 20px auto;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-        }
-
-        #chatbox {
-            max-width: 700px;
-            margin: 30px auto;
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 8px rgba(0,0,0,0.2);
-            text-align: left;
-        }
-
-        #messages {
-            height: 250px;
-            overflow-y: scroll;
-            border: 1px solid #e0e0e0;
-            padding: 10px;
-            margin-bottom: 15px;
-            background-color: #f9f9f9;
-            border-radius: 5px;
-        }
-
-        .message-item {
-            margin-bottom: 8px;
-            line-height: 1.4;
-            color: #555;
-        }
-        .message-item strong {
-            color: #007bff;
-        }
-        .message-item span.intention {
-            color: #28a745;
-            font-style: italic;
-        }
-
-        input[type="text"],
-        input[type="email"],
-        textarea {
-            width: calc(100% - 22px);
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-sizing: border-box;
-        }
-
-        button {
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s ease;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-
-        #name-input-field {
-            margin-right: 10px;
-            width: 200px;
-        }
-        #message-input-field {
-            width: calc(100% - 120px);
-            margin-right: 10px;
-        }
-    </style>
-    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
-    <link
-        rel="stylesheet"
-        href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
-    />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mapa de Intenciones</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: sans-serif;
+    }
+    #map {
+      height: 70vh;
+      width: 100%;
+    }
+    #formulario {
+      padding: 10px;
+      background: #f0f0f0;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+    #formulario input, #formulario textarea, #formulario button {
+      padding: 10px;
+      font-size: 1em;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+  </style>
 </head>
 <body>
-    <h1>Mapa Mundial de Intenciones y Conexiones</h1>
+  <div id="map"></div>
+  <div id="formulario">
+    <input type="text" id="nombre" placeholder="Tu nombre" required>
+    <textarea id="mensaje" rows="2" placeholder="Tu intención con emoji..." required></textarea>
+    <button onclick="enviarIntencion()">Enviar Intención</button>
+  </div>
 
-    <div class="banner-container">
-        <a href="https://clicks.pipaffiliates.com/c?m=131373&amp;c=1024465" referrerpolicy="no-referrer-when-downgrade">
-            <img src="https://ads.pipaffiliates.com/i/131373?c=1024465" width="320" height="100" referrerpolicy="no-referrer-when-downgrade"/>
-        </a>
-    </div>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <script type="module">
+    // Firebase SDK imports
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-app.js";
+    import { getFirestore, collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-firestore.js";
 
-    <div id="map"></div>
+    // Configuración de Firebase
+    const firebaseConfig = {
+      apiKey: "AIzaSyDCDY3wqHnxemQ9BCENmQ2eDEM9kq8MYfA",
+      authDomain: "mapa-de-intenciones.firebaseapp.com",
+      projectId: "mapa-de-intenciones",
+      storageBucket: "mapa-de-intenciones.firebasestorage.app",
+      messagingSenderId: "976088070391",
+      appId: "1:976088070391:web:07f563d10cfcbba425bbf2",
+      measurementId: "G-EKS82XZTDL"
+    };
 
-    <div class="banner-container">
-        <a href="https://clicks.pipaffiliates.com/c?m=131353&amp;c=1024465" referrerpolicy="no-referrer-when-downgrade">
-            <img src="https://ads.pipaffiliates.com/i/131353?c=1024465" width="300" height="250" referrerpolicy="no-referrer-when-downgrade"/>
-        </a>
-    </div>
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
 
-    <div id="chatbox">
-        <h2>Comparte tu Intención</h2>
-        <div id="messages"></div>
-        <input type="text" id="name-input-field" placeholder="Tu nombre" required />
-        <input type="text" id="message-input-field" placeholder="Escribe tu intención aquí..." />
-        <button onclick="addIntention()">Compartir Intención</button>
-    </div>
+    // Inicializar el mapa
+    const map = L.map('map').setView([0, 0], 2);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '© OpenStreetMap contributors'
+    }).addTo(map);
 
-    <script>
-        // Initialize the map
-        const map = L.map('map').setView([20, 0], 2);
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            maxZoom: 18,
-            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-        }).addTo(map);
+    // Cargar marcadores desde Firestore
+    const cargarIntenciones = async () => {
+      const querySnapshot = await getDocs(collection(db, "intenciones"));
+      querySnapshot.forEach(doc => {
+        const data = doc.data();
+        L.marker([data.lat, data.lng]).addTo(map)
+          .bindPopup(`<b>${data.nombre}</b><br>${data.mensaje}`);
+      });
+    };
 
-        let userName = '';
-        let intentions = [];
-
-        // ¡IMPORTANTE! Pega aquí la URL de la aplicación web que copiaste en el Paso 2.6.
-        const APPS_SCRIPT_URL = '1K17O-b0rpFfy44ZM_JxLVzAkaE1Nc4BMHfXdMU1rNno'; 
-
-        // Forbidden words list
-        const forbiddenWords = [
-            'puta', 'cabrón', 'mierda', 'coño', 'joder', 'gilipollas', 'imbécil',
-            'estúpido', 'idiota', 'fuck', 'shit', 'asshole', 'bitch', 'cunt', 'idiot'
-        ];
-
-        // Function to check for forbidden words
-        function containsForbiddenWords(text) {
-            const lowerText = text.toLowerCase();
-            for (const word of forbiddenWords) {
-                const regex = new RegExp(`\\b${word}\\b`);
-                if (regex.test(lowerText)) {
-                    return true;
-                }
-            }
-            return false;
-        }
-
-        // Function to load intentions from Google Apps Script
-        async function loadIntenciones() {
-            try {
-                const response = await fetch(APPS_SCRIPT_URL, { mode: 'cors' });
-                if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
-                }
-                const data = await response.json();
-                intentions = data;
-
-                document.getElementById("messages").innerHTML = '';
-                map.eachLayer(function (layer) {
-                    if (layer instanceof L.Marker && layer !== map.attributionControl) {
-                        map.removeLayer(layer);
-                    }
-                });
-
-                intentions.forEach(item => {
-                    const lat = parseFloat(item.Latitud);
-                    const lon = parseFloat(item.Longitud);
-
-                    if (!containsForbiddenWords(item.Intencion)) {
-                        addMessageToChat(item.Nombre, item.Intencion);
-                        if (!isNaN(lat) && !isNaN(lon)) {
-                            const popupContent = `<strong>${item.Nombre}:</strong> ${item.Intencion}<br><em>(Desde un lugar en el mundo)</em>`;
-                            L.marker([lat, lon])
-                                .addTo(map)
-                                .bindPopup(popupContent);
-                        }
-                    }
-                });
-            } catch (error) {
-                console.error("Error al cargar intenciones desde Google Apps Script:", error);
-                alert("No se pudieron cargar las intenciones. Por favor, inténtalo de nuevo más tarde. Verifica la consola para más detalles.");
-            }
-        }
-
-        // Function to add messages to the chatbox
-        function addMessageToChat(name, intention) {
-            const container = document.getElementById("messages");
-            const p = document.createElement("p");
-            p.classList.add('message-item');
-            p.innerHTML = `<strong>${name}</strong>: ${intention} ✨`;
-            container.appendChild(p);
-            container.scrollTop = container.scrollHeight;
-        }
-
-        // Function to add an intention to Google Apps Script
-        async function addIntention() {
-            const nameInput = document.getElementById("name-input-field");
-            const messageInput = document.getElementById("message-input-field");
-
-            const name = nameInput.value.trim();
-            const intention = messageInput.value.trim();
-
-            if (name === "" || intention === "") {
-                alert("Por favor, introduce tu nombre y tu intención.");
-                return;
-            }
-
-            if (containsForbiddenWords(intention)) {
-                alert("Tu intención contiene palabras no permitidas. Por favor, sé respetuoso.");
-                messageInput.value = "";
-                return;
-            }
-
-            userName = name;
-
-            let lat = null;
-            let lon = null;
-            let city = 'un lugar en el mundo';
-
-            try {
-                const geoResponse = await fetch("https://ipapi.co/json/");
-                const geoData = await geoResponse.json();
-                lat = geoData.latitude;
-                lon = geoData.longitude;
-                city = geoData.city || 'un lugar en el mundo';
-            } catch (geoError) {
-                console.warn("Could not get location by IP:", geoError);
-            }
-
-            const payload = {
-                name: name,
-                intention: intention,
-                lat: lat,
-                lon: lon,
-                timestamp: new Date().toISOString()
-            };
-
-            try {
-                const scriptResponse = await fetch(APPS_SCRIPT_URL, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify(payload),
-                    mode: 'cors'
-                });
-
-                if (!scriptResponse.ok) {
-                    throw new Error(`Apps Script HTTP error! status: ${scriptResponse.status}`);
-                }
-
-                const result = await scriptResponse.json();
-                if (result.status === 'success') {
-                    console.log("Intention saved to Google Sheet.");
-                    addMessageToChat(name, intention);
-                    if (lat && lon) {
-                        const popupContent = `<strong>${name}:</strong> ${intention}<br><em>(Desde ${city})</em>`;
-                        L.marker([lat, lon])
-                            .addTo(map)
-                            .bindPopup(popupContent)
-                            .openPopup();
-                        map.setView([lat, lon], 5);
-                    } else {
-                        alert("Intención guardada, pero la ubicación no pudo ser determinada.");
-                    }
-                    messageInput.value = '';
-                } else {
-                    alert("Error al guardar la intención: " + (result.message || "Error desconocido. Verifica la consola para más detalles."));
-                }
-            } catch (error) {
-                console.error("Error al enviar intención a Google Apps Script:", error);
-                alert("No se pudo guardar la intención en el servidor. Por favor, inténtalo de nuevo. Verifica la consola para más detalles.");
-            }
-        }
-
-        document.addEventListener('DOMContentLoaded', loadIntenciones);
-
-        document.getElementById("message-input-field").addEventListener("keypress", function(event) {
-            if (event.key === "Enter") {
-                event.preventDefault();
-                addIntention();
-            }
+    // Enviar nueva intención
+    window.enviarIntencion = async () => {
+      const nombre = document.getElementById("nombre").value.trim();
+      const mensaje = document.getElementById("mensaje").value.trim();
+      const centro = map.getCenter();
+      if (!nombre || !mensaje) {
+        alert("Por favor completa todos los campos.");
+        return;
+      }
+      try {
+        await addDoc(collection(db, "intenciones"), {
+          nombre,
+          mensaje,
+          lat: centro.lat,
+          lng: centro.lng
         });
+        L.marker([centro.lat, centro.lng]).addTo(map)
+          .bindPopup(`<b>${nombre}</b><br>${mensaje}`).openPopup();
+        document.getElementById("nombre").value = "";
+        document.getElementById("mensaje").value = "";
+      } catch (error) {
+        console.error("Error al guardar la intención: ", error);
+      }
+    };
 
-        document.getElementById("name-input-field").addEventListener("change", function() {
-            userName = this.value.trim();
-        });
-
-    </script>
+    cargarIntenciones();
+  </script>
 </body>
 </html>
-
-
+             
